<resources>
    <string name="app_name">SampleA3LMessagingApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Target Messaging</string>
    <string name="second_fragment_label">Topic Based Messaging</string>
    <string name="third_fragment_label">Group Based Messaging</string>
    <string name="send_push">Send Push Notification</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="topic">Topic</string>
    <string name="group">Group</string>
    <string name="create">Create</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="welcome_message">Welcome to SampleA3LMessagingApp, a demo app built using A3LMessaging. \n\nClick on below button to send a test push notification.</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="debug_statement">Debug Statement Place holder</string>
    <!--<string name="google_api_key">AIzaSyD6z6bssIO7LDP-j1vRw6kKoQXz5-f2vbY</string>-->
</resources>