<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/welcome_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="10"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toTopOf="@id/debug_textview"/>

    <TextView
        android:id="@+id/debug_textview"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="324dp"
        android:maxLines="10"
        android:text="@string/debug_statement"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/send_push_button"
        app:layout_constraintStart_toStartOf="@id/welcome_box" />

    <Button
        android:id="@+id/send_push_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="88dp"
        android:text="@string/send_push"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/debug_textview" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/send_push_button" />

</androidx.constraintlayout.widget.ConstraintLayout>